# Tessera

./: .gitignore  Cargo.toml  Commands for Tessera NO TERRADEV.txt  Dockerfile.hypernetwork  Dockerfile.tessera  LICENSE  README.md  Tessera 2.0.0 dataset import script.py  Tessera Critical Bug Fixes Completion 0.2.md  Tessera Critical Bug Fixes Completion.md  Test Metadata for Tessera v0.1  docker-compose.yml  pyproject.toml  rustfmt.toml  setup_github.sh
.github/workflows/: docker.yml  python-ci.yml  rust-ci.yml
hypernetwork/: ADAPTER_PERFORMANCE_REVIEW.md  DEMO.md  Dockerfile  FUTURE_RESEARCH.md  IMPLEMENTATION_REVIEW.md  QUICKSTART.py  README.md  SESSION_REVIEW.md  TRAINING_GUIDE.md  __init__.py  doc_to_lora.py  metadata_to_lora.py  pyproject.toml  requirements.txt  server.py  test_hypernetwork.py  text_to_lora.py
hypernetwork/tessera_hypernetwork/: __init__.py  adapter_unlearning.py  calibration_aware.py  cli.py  doc_to_lora.py  efficiency.py  latency_optimizer.py  layer_wise.py  lora_ensemble.py  metadata_to_lora.py  server.py  test_hypernetwork.py  text_to_lora.py  train_and_evaluate.py  train_hypernetwork.py  ttft_tpot.py
src/: cache.rs  cli.rs  config.rs  error.rs  main.rs
src/adapter/: mod.rs  validate.rs  weights.rs
src/api/: mod.rs  models.rs  routes.rs
src/cache/: mod.rs  prefetch.rs  semantic.rs  store.rs
src/composition/: cross_arch.rs  mixer.rs  mod.rs
src/embedding/: encoder.rs
src/generation/: client.rs  mod.rs  pipeline.rs
tests/integration/: test_cache.rs  test_generate.rs  test_prefetch.rs
tests/unit/: test_embedding.rs  test_similarity.rs  test_weights.rs
