[project]
name = "tessera-hypernetwork"
version = "0.1.0"
description = "Tessera Hypernetwork Service - LoRA adapter generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.1.0",
    "safetensors>=0.4.0",
    "transformers>=4.35.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hypernetwork"]
