[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera-hypernetwork"
version = "1.0.5"
description = "Generate per-session LoRA adapters for inference tasks"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Tessera Contributors"}
]
keywords = ["lora", "peft", "hypernetwork", "machine-learning", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "torch>=2.1.0,<2.4",
    "safetensors>=0.4.3",
    "click>=8.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.0.0",
    "transformers>=4.30.0,<4.40.0",
    "numpy<2",
    "protobuf<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/theoddden/Tessera"
Repository = "https://github.com/theoddden/Tessera"
Issues = "https://github.com/theoddden/Tessera/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tessera_hypernetwork*"]

[project.scripts]
tessera = "tessera_hypernetwork.cli:main"
